examples/type_system/failing/183_hash_missing_colon.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

let h = { "a" 1 }
let after = 1
